--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,49 @@
-h1 {
-    color: red;
+
+
+h1 { /*I want all Heading to be in the middle*/
+    text-align: center;
+}
+
+#welcome h1 {       /*I want the "Hello My name is" to be the biggest*/
+    font-size: 82px;
+}
+
+#about h1, #projects h1 {
+    font-size: 48px;
 }
 
 nav ul {
     list-style-type: none;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; /*creates 3 columns*/
+    gap: 30px;  /*adds spacing between the columns*/
+    min-height: 25vh;
+}
+
+.project-tile {
+    border: 5px solid black; 
+    position: relative; /*allows the projects to sit next to each other*/
+    display: flex;
+    gap: 10px;
+    margin: 15px 5px; /*15 top-bottom and 5 left-right*/
+}
+
+.project-title {
+    flex: 1;
+    padding-left: 5px;
+}
+
+.project-image {
+    flex: 1;
+}
+
+
+@media (max-width: 767px) {
+    nav {
+        display: none; /*hide the nav-menu when on phone*/
+    }
+
 }
