--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,54 @@
-
-
 #navbar {
-    background: blue; 
+    background: orange; 
     position: fixed; /*I want the navmenu to stay when I scroll*/
     top: 0px;
     width: 100%; /*takes the whole horizontal spacing */
 }
 
+nav ul {
+    list-style-type: none;
+    display: flex;
+    gap: 20px; 
+    justify-content: flex-end; /*moves content of navbar to the right side of the screen (my right)*/ 
+    padding-right: 20px;
+}
+
+#navbar a {
+    color: black;
+    text-decoration: none; 
+}
+
+#navbar a:hover {
+    color: red;
+}
+
+
+
+
 h1 { /*I want all Heading to be in the middle*/
     text-align: center;
+}
+
+welcome {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column; /*allows the welcome texts to sit on top of each other*/
+    justify-content: center;
+    text-align: center; /*I want my welcome to be in the middle*/
 }
 
 #welcome h1 {       /*I want the "Hello My name is" to be the biggest*/
     font-size: 82px;
 }
 
+.intro-sentence {
+    font-size: 2em; 
+}
+
 #about h1, #projects h1 {
     font-size: 48px;
 }
 
-nav ul {
-    list-style-type: none;
-}
 
 .project-grid {
     display: grid;
