--- a/styles.css
+++ b/styles.css
@@ -83,15 +83,23 @@ h1 { /*I want all Headings to be in the middle*/
     width: 50%;
 }
 
-#about-right-column {
-    width: 30%;
-    margin-top: 50px;
-}
-
 #about-left-column p {
     font-size: 18px;
 }
 
+#about-right-column {
+    width: 20%;
+    line-height: 23px;
+}
+
+.skill-button {
+    background-color: beige;
+    padding: 12px;
+    margin-bottom: 10px;
+    border: 2px solid black;
+    border-radius: 15px;
+    width: 100px;
+}
 
 
 
