--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+body {
+    font-family: Nunito, Arial, Helvetica, sans-serif;
+}
+
 #navbar {
     background: orange; 
     position: fixed; /*I want the nav menu to stay when I scroll*/
@@ -67,7 +71,6 @@ h1 { /*I want all Headings to be in the middle*/
 
 /*the "I build things" sentence*/
 #about h1 {
-    text-align: center;
     font-size: 48px;
 }
 
@@ -146,6 +149,28 @@ h1 { /*I want all Headings to be in the middle*/
     max-width: 50%;
     object-fit: cover;
 }
+
+
+#contacts {
+    position: relative;
+    text-align: center; 
+}
+
+#contacts h1 {
+    font-size: 36px;
+}
+
+#contacts a {
+    font-size: 18px;
+}
+
+#contacts a:hover{
+    color: pink;
+}
+
+
+
+
 
 
 @media (max-width: 767px) {
