--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 body {
     font-family: Nunito, Arial, Helvetica, sans-serif;
+      background: linear-gradient(#A8B5E0, #C1D5F0, #D5E3F0);
+
 }
 
 #navbar {
-    background: orange; 
+    background: #DAF0F7; 
     position: fixed; /*I want the nav menu to stay when I scroll*/
     top: 0px;
     width: 100%; /*takes the whole horizontal spacing */
@@ -23,7 +25,7 @@ nav ul {
 }
 
 #navbar a:hover {
-    color: red;
+    color: pink;
 }
 
 
@@ -51,25 +53,30 @@ h1 { /*I want all Headings to be in the middle*/
 
 #view-project-button { /*this is the View my Projects Button*/
     display: flex;
-    width: 100px;
+    width: 150;
     justify-content: center;
     align-items: center;
     background: beige;
     padding: 10px;
-    border: 5px solid black;
+    border: 5px solid transparent;
     border-radius: 50px;
     margin: 20px auto 0; 
 }
 
 #view-project-button a {
     text-decoration: none; 
+    color:black;
 }
 
 #view-project-button a:hover {
-    color: red;
+    color: pink;
 }
 
 /*the "I build things" sentence*/
+#about {
+    border-top: 5px solid #C8D9F0;
+}
+
 #about h1 {
     font-size: 48px;
 }
@@ -99,7 +106,7 @@ h1 { /*I want all Headings to be in the middle*/
     background-color: beige;
     padding: 12px;
     margin-bottom: 10px;
-    border: 2px solid black;
+    border: 2px solid transparent;
     border-radius: 15px;
     width: 100px;
 }
@@ -114,11 +121,9 @@ h1 { /*I want all Headings to be in the middle*/
     font-size: 48px;
 }
 
-
 #projects {
     margin-top: 50px;
 }
-
 
 .project-grid {
     display: grid;
@@ -129,8 +134,9 @@ h1 { /*I want all Headings to be in the middle*/
 
 .project-tile {
     border: 5px solid black; 
-    position: relative; /*allows the projects to sit next to each other*/
     display: flex;
+    flex-direction: column; 
+    align-items: center; 
     gap: 10px;
     margin: 15px 5px; /*15 top-bottom and 5 left-right*/
 }
@@ -140,17 +146,25 @@ h1 { /*I want all Headings to be in the middle*/
     padding-left: 5px;
 }
 
-.project-image {
+.project-title a{ 
+    color: black;
+}
+
+.project-title a:hover {
+    color: pink;
+}
+
+.project-image { /*this is NOT the image itself, if you want to make edits*/
     flex: 1;
 }
 
 .project-image img { /*this is about the image of the project iself*/
-    min-height: 25vh; 
-    max-width: 50%;
+    max-width: 100%; /*makes image stay in container*/
     object-fit: cover;
 }
 
 
+/*contacts section*/
 #contacts {
     position: relative;
     text-align: center; 
@@ -167,10 +181,6 @@ h1 { /*I want all Headings to be in the middle*/
 #contacts a:hover{
     color: pink;
 }
-
-
-
-
 
 
 @media (max-width: 767px) {
