--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,15 @@ h1 { /*I want all Headings to be in the middle*/
     overflow: hidden; /*hides content until the animation starts*/
     white-space: nowrap; /*keeps it on a single line*/
     border-right: 5px solid; /*the cursor*/
-    animation: typing 3s steps(25) forwards, 
-    /*this is a keyframe rule, it defines the typing animation
-        and "Steps" equals the number of characters
-        and "forwards" ensures the typing animation does not replay */
-        blink 1s step-end infinite; /*the linking cursor*/
+    width: 0; 
+    animation: 
+        typing 3s steps(25, end) forwards, 
+            /*this is a keyframe rule, it defines the typing animation
+                and "Steps" equals the number of characters
+                and "forwards" ensures the typing animation does not replay */
+        blink 0.7s step-end infinite, /*the blinking cursor*/ 
+        hide-cursor 0.1s forwards; 
+    animation-delay: 0s, 0s, 3s; 
 }
 
 @keyframes typing {
@@ -84,9 +88,16 @@ h1 { /*I want all Headings to be in the middle*/
 
 @keyframes blink {
     50% {
-        border-color: transparent
+        border-color: transparent;
     }
 }
+
+@keyframes hide-cursor {
+    to {
+        border-right-color: transparent;
+    }
+}
+
 
 #view-project-button { /*this is the View my Projects Button*/
     display: flex;
