--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,12 @@ nav ul {
     padding-bottom: 20px;
 }
 
-#navbar a {
+#navbar a, #view-project-button a{
     color: black;
     text-decoration: none; 
 }
 
-#navbar a:hover {
+#navbar a:hover, #view-project-button a:hover, .project-title a:hover, #contacts a:hover {
     color: pink;
 }
 
@@ -98,7 +98,6 @@ h1 { /*I want all Headings to be in the middle*/
     }
 }
 
-
 #view-project-button { /*this is the View my Projects Button*/
     display: flex;
     width: 150;
@@ -109,15 +108,6 @@ h1 { /*I want all Headings to be in the middle*/
     border: 5px solid transparent;
     border-radius: 50px;
     margin: 20px auto 0; 
-}
-
-#view-project-button a {
-    text-decoration: none; 
-    color:black;
-}
-
-#view-project-button a:hover {
-    color: pink;
 }
 
 #about {
@@ -192,10 +182,6 @@ h1 { /*I want all Headings to be in the middle*/
     color: black;
 }
 
-.project-title a:hover {
-    color: pink;
-}
-
 .project-image { /*this is NOT the image itself, if you want to make edits*/
     flex: 1;
 }
@@ -219,14 +205,39 @@ h1 { /*I want all Headings to be in the middle*/
     font-size: 18px;
 }
 
-#contacts a:hover{
-    color: pink;
-}
-
 /*added for phone*/
 @media (max-width: 767px) {
     nav {
         display: none; /*hide the nav-menu when on phone*/
+    }
+
+    #welcome h1, #about h1, #projects h1 {    
+        font-size: 48px;
+    }
+
+    #welcome p {
+        font-size: 25px;
+    }
+
+    #about-text {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 5px; 
+    }
+
+    #about-left-column, #about-right-column {
+        width: 100%; 
+    }
+
+    #skills {
+        display: flex;
+        flex-wrap: wrap; /*allows wrap for small screens*/
+        gap: 0.75rem; 
+    }
+
+    .skill-button {
+        margin-left: 12px;
     }
 
 }
