--- a/styles.css
+++ b/styles.css
@@ -76,26 +76,17 @@ h1 { /*I want all Headings to be in the middle*/
     animation-delay: 0s, 0s, 3s; 
 }
 
-@keyframes typing {
-    from {
-        width: 0; 
-    }
-    to {
-        width: 100%; 
-    }
+@keyframes typing { /*how long the animation should play*/
+    from { width: 0; }
+    to { width: 100%; }
 }
-/*how long the animation should play*/
 
 @keyframes blink {
-    50% {
-        border-color: transparent;
-    }
+    50% { border-color: transparent; }
 }
 
 @keyframes hide-cursor {
-    to {
-        border-right-color: transparent;
-    }
+    to { border-right-color: transparent; }
 }
 
 #view-project-button { /*this is the View my Projects Button*/
@@ -221,19 +212,20 @@ h1 { /*I want all Headings to be in the middle*/
 
     #about-text {
         display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: column; /*I want them to stack on top of each other now*/
+        align-items: flex-start; 
         gap: 5px; 
     }
 
     #about-left-column, #about-right-column {
-        width: 100%; 
+        width: 100%; /*each should take up an entire line themselves*/
     }
 
     #skills {
         display: flex;
-        flex-wrap: wrap; /*allows wrap for small screens*/
-        gap: 0.75rem; 
+        flex-wrap: wrap; 
+            /*allows things tomove below automatically when there is not enough space*/
+        gap: 0.75rem; /*rem is 16px so 0.75*16 = 12 */
     }
 
     .skill-button {
