--- a/styles.css
+++ b/styles.css
@@ -64,10 +64,8 @@ h1 { /*I want all Headings to be in the middle*/
     width: 0; 
     animation: 
         typing 3s steps(25) forwards, 
-            /*this is a keyframe rule, it defines the typing animation
-                and "Steps" equals the number of characters
-                and "forwards" ensures the typing animation does not replay; 
-                    it stays in its last state*/
+            /*"Steps" equals the number of characters 
+            and "forwards" ensures the element stays in its last state after the animation played*/
         blink 0.7s step-end infinite, /*the blinking cursor*/ 
         hide-cursor 0.1s forwards; 
     animation-delay: 0s, 0s, 3s; 
@@ -89,10 +87,7 @@ h1 { /*I want all Headings to be in the middle*/
 .typewriter-p {
     overflow: hidden;
     white-space: nowrap;
-    animation: fadeInAnimation ease 6s;
-    animation-iteration-count: 1; /*this means the animation runs once*/
-    animation-fill-mode: forwards; 
-        /*forwards means the animaiton does not replay, it stays in its last state*/
+    animation: fadeInAnimation ease 6s 1 forwards;
 }
 
 @keyframes fadeInAnimation { /*fadeInAnimation is the name I gave to the animation*/
