added comments to explain my code

--- a/styles.css
+++ b/styles.css
@@ -46,14 +46,14 @@ nav ul {
     padding: 0; /*makes icon biggest size possible in their provided container*/
     margin: 10px 10px 10px -20px; /*clockwise, top -right -bottom -left*/
     border-radius: 50%; /*makes it round*/
-    background-color: var(--bg-color);
+    background-color: var(--bg-color); /*this should be dark blue*/
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 #theme-switch svg {
-    fill:var(--text-color);
+    fill:var(--text-color); /*this changes icon color from black (light mode) to white (dark mode)*/
 }
 
 #theme-switch svg:last-child{ /*this hide the sun icon during light/default mode*/
@@ -65,13 +65,9 @@ nav ul {
 }
 
 .darkmode #theme-switch svg:last-child {
-    display: block;
+    display: block; 
+    /*allows svg file to behave like a block instead of inline element; allows it to be visible*/
 }
-
-
-
-
-
 
 #navbar a, #view-project-button a{
     color: var(--text-color);
